2009-04-04  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-stream-fs.c: Ported to Windows by #including io.h

	* examples/basic-example.c: Reverted to the old GMimeStreamFs logic
	and #included io.h for G_OS_WIN32 systems.

	* examples/imap-example.c: Ported to Windows by #including io.h and
	using g_ascii_strcasecmp().

2009-04-03  Jeffrey Stedfast  <fejj@novell.com>

	* build/vs2008: New directory for Visual Studio 2008 Solution & Project
	files.

	* gmime.vcproj: Moved to build/vs2008

	* config.h.win32: Same.

	* gmime.sln: Same.

	* examples/basic-example.c: Fixed to build under Visual Studio by
	using GMimeStreamFile instead of GMimeStreamFs and by #ifdef'ing
	out the GnuPG code.

	* tests/testsuit.[c,h]: Fixed to compile under Visual Studio which
	basically means we can't use _try() as a function. Renamed to g_try().
	Also renamed throw() to g_throw() for consistency.

2009-04-02  Jeffrey Stedfast  <fejj@novell.com>

	* tests/testsuite.c: Modified to compile without the need for
	pthread.h

	* gmime.vcproj: Added logic to the PreBuild step to copy
	config.h.win32 to config.h

	* config.h.win32: Added.

2009-04-01  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c: #include <process.h> for getpid() and ws2tcpip.h
	for getaddrinfo() on Windows platforms.
	(mktime_utc): Use _get_timezone() when building on Windows.
	(g_mime_utils_header_format_date): Windows has gmtime_s() instead
	of gmtime_r(), so use that on Windows.

	* gmime/gmime-parser.c: If glib is >= 2.14, use GRegex instead of
	glibc regex.

2009-04-01  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c: Need to #include <unistd.h> for getpid().

	* gmime/gmime-stream-fs.c: Need to #include <unistd.h> here.

	* gmime/gmime-multipart-signed.c: Got rid of an unused variable.

	* gmime/gmime-message.c: Removed unused variables.

	* gmime/gmime-content-type.c: Don't need to #include
	"gmime-table-private.h" here as we don't actually use it.
