@@ -22,15 +22,10 @@
 #include <config.h>
 #endif
 
+#include <gmime/gmime.h>
+
 #include <stdio.h>
 #include <stdlib.h>
-#include <unistd.h>
-#include <sys/types.h>
-#include <sys/stat.h>
-#include <fcntl.h>
-#include <time.h>
-
-#include <gmime/gmime.h>
 
 #include "testsuite.h"
 
